# unigine-photon-cpp-integration-sample

./: .gitignore  README.md  unigine-photon-cpp-integration-sample-lin-community-double.project  unigine-photon-cpp-integration-sample-lin-community-float.project  unigine-photon-cpp-integration-sample-lin-eng-sim-double.project  unigine-photon-cpp-integration-sample-lin-eng-sim-float.project  unigine-photon-cpp-integration-sample-win-community-double.project  unigine-photon-cpp-integration-sample-win-community-float.project  unigine-photon-cpp-integration-sample-win-eng-sim-double.project  unigine-photon-cpp-integration-sample-win-eng-sim-float.project  unigine-photon-cpp-integration-sample.project  unigine-photon-cpp-integration-sample_lin_academic_double.project  unigine-photon-cpp-integration-sample_lin_academic_float.project  unigine-photon-cpp-integration-sample_lin_community_double.project  unigine-photon-cpp-integration-sample_lin_community_float.project  unigine-photon-cpp-integration-sample_lin_engineering_double.project  unigine-photon-cpp-integration-sample_lin_engineering_float.project  unigine-photon-cpp-integration-sample_lin_entertainment_double.project  unigine-photon-cpp-integration-sample_lin_entertainment_float.project  unigine-photon-cpp-integration-sample_lin_sim_double.project  unigine-photon-cpp-integration-sample_lin_sim_float.project  unigine-photon-cpp-integration-sample_win_academic_double.project  unigine-photon-cpp-integration-sample_win_academic_float.project  unigine-photon-cpp-integration-sample_win_community_double.project  unigine-photon-cpp-integration-sample_win_community_float.project  unigine-photon-cpp-integration-sample_win_engineering_double.project  unigine-photon-cpp-integration-sample_win_engineering_float.project  unigine-photon-cpp-integration-sample_win_entertainment_double.project  unigine-photon-cpp-integration-sample_win_entertainment_float.project  unigine-photon-cpp-integration-sample_win_sim_double.project  unigine-photon-cpp-integration-sample_win_sim_float.project
data/: hp_material.mat  menu_world.world  room_world.world  root_mount.umount
data/.editor2/sandworm/: urls.json
data/ComponentSystem/: GameChat.prop  GameManager.prop  MainMenu.prop
data/material_ball/: material_ball.mesh  material_ball.node  material_ball_mat.mat
source/: AppSystemLogic.cpp  AppSystemLogic.h  AppWorldLogic.cpp  AppWorldLogic.h  CMakeLists.txt  ChatListener.cpp  ChatListener.h  GameChat.cpp  GameChat.h  GameManager.cpp  GameManager.h  GamePlayer.cpp  GamePlayer.h  MainMenu.cpp  MainMenu.h  NetworkListener.cpp  NetworkListener.h  Utils.cpp  Utils.h  main.cpp
source/PhotonSDK/: Readme.txt
source/cmake/: UnigineCMakeVariables.cmake
source/cmake/modules/: FindEditor.cmake  FindEngine.cmake  FindPhoton.cmake
